--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "rontend",
   "license": "MIT",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3"
   },
   "eslint.packageManager": "yarn"
